--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { 
+    margin: 0; 
+    font-family: 'Kanit', Roboto, "Helvetica Neue", sans-serif; 
+    background-color: #1F1D36;
+    padding-top: 30px;
+}
+
+.pink {
+    color: #E9A6A6;
+}
