--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 .custom-navbar {
     color: white !important; 
-    background-color: #1f1d36 !important;
+    background-color: #600634 !important;
 }
 
 .white {
