--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -15,7 +15,7 @@
             <h1> Registrati! </h1>
         </div>
         <div class="col-12 mb-3">
-            <input type="text" class="form-control fw-bold" minlength="5" name="username" [(ngModel)]="username" placeholder="Username">
+            <input type="text" class="form-control fw-bold" minlength="5" name="username" autocomplete="off" [(ngModel)]="username" placeholder="Username">
         </div>
         <div class="col-12 mb-3">
             <input type="password" class="form-control fw-bold" minlength="6" name="password" [(ngModel)]="password" placeholder="Password">
