--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
-
+* {
+    scroll-behavior: smooth;
+}
 html, body { height: 100%; }
 body { 
     margin: 0; 
     font-family: 'Kanit', Roboto, "Helvetica Neue", sans-serif; 
     background-color: #1F1D36;
-    padding-top: 30px;
+    padding-top: 56.8px;
+    padding-bottom: 50px;
 }
 
 .pink {
     color: #E9A6A6;
+}
+
+.mat-slider-track-background {
+    background-color: white;
+}
+
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+
+
+@media screen and (min-width: 992px) {
+    body {
+        padding-top: 60.8px;
+    }
 }
