slider width fix

--- a/src/app/components/gamepage/gamepage.component.scss
+++ b/src/app/components/gamepage/gamepage.component.scss
@@ -192,7 +192,8 @@
 }
 
 .slider {
-    transform: scale(2);
+    transform: scale(1.8);
+    width: 100%;
 }
 
 @media screen and (max-width: 767px) {
