--- a/src/app/components/gamepage/gamepage.component.html
+++ b/src/app/components/gamepage/gamepage.component.html
@@ -141,7 +141,7 @@
             <h4>Scrivi una recensione</h4>
             <form class="d-flex flex-column justify-content-evenly align-items-center text-start">
                 <p class="w-100" *ngIf="review.time">Hai già lasciato una recensione il {{ review.time.toString() | isodate }}. </p>
-                <textarea class="form-control form-control-lg w-100 black" name="reviewContent" [(ngModel)]="review.reviewContent" maxlength="140" minlength="1" placeholder="Recensione">
+                <textarea class="form-control form-control-lg black" name="reviewContent" [(ngModel)]="review.reviewContent" maxlength="140" minlength="1" placeholder="Recensione">
                 </textarea>
                 <mat-slider name="rating" id="rating" (change)="updateVote()" thumbLabel class="w-50 slider mt-2 mb-2" min="0.0" max="10.0" step="0.5" [value]="(review.rating !== undefined ? review.rating : '5.0')"></mat-slider>
                 <button class="form-control btn btn-success" (click)="sendReview()"> {{ review.time ? "Modifica" : "Invia" }} recensione</button>
