--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,17 @@ body {
     background-color: white;
 }
 
+.mat-slider-thumb-label {
+    width: 40px !important;
+    height: 40px !important;
+    top: -52px !important;
+    right: -20px !important;
+}
+
+.mat-slider-thumb-label-text {
+    font-family: 'Kanit', Roboto, "Helvetica Neue", sans-serif !important; 
+}
+
 ::-webkit-scrollbar {
     width: 0;  /* Remove scrollbar space */
     background: transparent;  /* Optional: just make scrollbar invisible */
