--- a/src/app/components/gaming/gaming.component.html
+++ b/src/app/components/gaming/gaming.component.html
@@ -1,4 +1,7 @@
 <app-navbar></app-navbar>
+
+<app-fatalerror></app-fatalerror>
+
 <div class="mt-5 container-lg p-3">
     <div class="input-group mb-3">
         <input type="text" autocomplete="off" class="form-control custom-text" name="query" [(ngModel)]="query" (keyup.enter)="search()" placeholder="Cerca un gioco!">
