--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,6 +5,8 @@
     <h3> Reindirizzo alla home... </h3>
 </div>
 
+<app-fatalerror></app-fatalerror>
+
 <div class="d-flex flex-column justify-content-center h-100 container-md login p-5">
     <div *ngIf="errors.length > 0" class="errors mb-3">
         <mat-icon class="mb-3 error-icon">error</mat-icon>
