--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,6 +1,7 @@
 .custom-navbar {
     color: white !important; 
     background-color: #600634 !important;
+    border-radius: 0px 0px 15px 15px;
 }
 
 .white {
