--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,6 +5,8 @@
     <h3> Reindirizzo alla pagina di accesso... </h3>
 </div>
 
+<app-fatalerror></app-fatalerror>
+
 <div class="d-flex flex-column justify-content-center h-100 container-md register p-5">
     <div *ngIf="errors.length > 0" class="errors mb-3">
         <mat-icon class="mb-3 error-icon">error</mat-icon>
