--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <a class="navbar-brand">
             <img src="/assets/icons/logo.svg" width="30" height="30" class="d-inline-block align-text-top">
-            <a class="ms-1 white-clickable" routerLink="/gaming/">PoppinGames</a>
+            <a class="ms-1 white-clickable" routerLink="/poppingames/">PoppinGames</a>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -11,13 +11,13 @@
             <div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a *ngIf="localStorage?.getItem('username')" class="nav-link white-clickable" routerLink="/gaming">Home</a>
+                        <a *ngIf="localStorage?.getItem('username')" class="nav-link white-clickable" routerLink="/poppingames">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a *ngIf="!localStorage?.getItem('username')" class="nav-link white-clickable" routerLink="/gaming/login">Login</a>
+                        <a *ngIf="!localStorage?.getItem('username')" class="nav-link white-clickable" routerLink="/poppingames/login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a *ngIf="!localStorage?.getItem('username')" class="nav-link white-clickable" routerLink="/gaming/register">Registrazione</a>
+                        <a *ngIf="!localStorage?.getItem('username')" class="nav-link white-clickable" routerLink="/poppingames/register">Registrazione</a>
                     </li>
                 </ul>
             </div>
