--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ body {
     background-color: #1F1D36;
     padding-top: 56.8px;
     padding-bottom: 50px;
+    backface-visibility: hidden;
 }
 
 .pink {
