--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="w-100 d-flex flex-column justify-content-center align-items-center success text-center" id="success">
     <mat-icon class="success-icon mb-3">check_circle</mat-icon>
     <h1> Hai effettuato l'accesso! </h1>
-    <h3> Reindirizzo alla home... </h3>
+    <h3> Reindirizzo... </h3>
 </div>
 
 <app-fatalerror></app-fatalerror>
