--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <a class="navbar-brand">
             <img src="/assets/icons/logo.svg" width="30" height="30" class="d-inline-block align-text-top">
-            <a class="ms-1 white-clickable" routerLink="/poppingames/">PoppinGames</a>
+            <a class="ms-1 white-clickable" routerLink="/poppingames/" (click)="clearCache()">PoppinGames</a>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -11,7 +11,7 @@
             <div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a *ngIf="localStorage?.getItem('username')" class="nav-link white-clickable" routerLink="/poppingames">Home</a>
+                        <a *ngIf="localStorage?.getItem('username')" class="nav-link white-clickable" routerLink="/poppingames" (click)="clearCache()">Home</a>
                     </li>
                     <li class="nav-item">
                         <a *ngIf="!localStorage?.getItem('username')" (click)="this.localStorage?.setItem('redirectUrl', this.router.url)" class="nav-link white-clickable" routerLink="/poppingames/login">Login</a>
@@ -25,7 +25,7 @@
             <div class="d-lg-flex flex-row justify-content-between">
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item">
-                        <a *ngIf="localStorage?.getItem('username')" class="nav-link white"> Ciao, <a class="white-clickable" href="#"> <b> {{ localStorage?.getItem('username') }} </b> </a> </a>
+                        <p *ngIf="localStorage?.getItem('username')" class="white m-2"> Ciao, <b> {{ localStorage?.getItem('username') }} </b> </p>
                     </li>
                     <li class="nav-item">
                         <button *ngIf="localStorage?.getItem('username')" class="btn btn-danger" (click)="logout()">Disconnetti</button>
