--- a/src/app/components/gamepage/gamepage.component.scss
+++ b/src/app/components/gamepage/gamepage.component.scss
@@ -228,6 +228,10 @@
     word-break: break-word;
 }
 
+.clip-date {
+    font-size: 1.1rem;
+}
+
 @media screen and (max-width: 767px) {
     .mt-custom-sm {
         margin-top: 1.5rem;
