changed wrapping behaviour for games' card's text

--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -25,7 +25,7 @@
     text-align: start;
     border-radius: 0px 0px 10px 10px;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     justify-content: center;
     align-items: flex-start;
     padding: 200px 10px 10px 10px;
