--- a/src/app/components/gamepage/gamepage.component.html
+++ b/src/app/components/gamepage/gamepage.component.html
@@ -4,7 +4,7 @@
         <div class="col-12">
             <div class="hero" 
                 [ngStyle]="{
-                    'background-image': 'linear-gradient(to bottom, rgba(31, 29, 54, 0.4) 0%, rgba(31, 29, 54, 1)),' +
+                    'background-image': 'linear-gradient(to bottom, rgba(31, 29, 54, 0.35) 0%, rgba(31, 29, 54, 1)),' +
                     'url(' + ( game?.background_image_additional || game?.background_image || '/assets/default/gameboy.svg' ) + ')'
                 }"> 
             </div>
@@ -140,6 +140,11 @@
         <div class="col-lg-7 reviews">
             <div *ngFor="let currentReview of reviews">
                 <div class="card review-card">
+                    <a class="delete-button" 
+                    *ngIf="localStorage!.getItem('username') && (currentReview._id === ownReviewId || isAdmin)" 
+                    (click)="deleteReview(currentReview._id)">
+                        <mat-icon>delete_forever</mat-icon>
+                    </a>
                     <div class="row">
                         <div class="col-9">
                             <div class="card-body">
