--- a/src/app/components/gamepage/gamepage.component.scss
+++ b/src/app/components/gamepage/gamepage.component.scss
@@ -15,16 +15,16 @@
 }
 
 .text-bg {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.65);
     border-radius: 10px;
 }
 
 .hero {
     background-size: cover;
-    background-position: top;
+    background-position: center;
     height: 600px;
     width: 100%;
-    filter: blur(5px);
+    filter: blur(3px);
     opacity: 1;
 }
 
@@ -162,9 +162,30 @@
     background: none;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 6px 0px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     margin-bottom: 15px;
+    position: relative;
     
     * {
         color: #efefef;
+    }
+}
+
+.delete-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    text-decoration: none;
+
+    mat-icon {
+        color: #dc3545 !important;
+        font-size: 30px;
+        width: 30px;
+        height: 30px;
+        transition: 0.2s ease-in-out all;
+
+        &:hover {
+            transform: scale(1.25);
+        }
     }
 }
 
