reduced card height, added pipe to convert full size image url to cropped image url for cards

--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,4 +1,4 @@
-<div class="card custom-card" [style.background-image]="'url(' + (game?.background_image || '/assets/default/gameboy.svg') + ')'">
+<div class="card custom-card" [style.background-image]="'url(' + ((game?.background_image | downscaledImage) || '/assets/default/gameboy.svg') + ')'">
     <div class="card-text">
       <div class="platforms">
         <div 
